--- a/KosaESS/src/main/resources/static/css/admin/class_form.css
+++ b/KosaESS/src/main/resources/static/css/admin/class_form.css
@@ -104,6 +104,7 @@ input {
 .class_form_content .row3 {
 	display: flex;
 	border-bottom: 1px solid #0E5881;
+	height: 300px;
 }
 
 .class_form_content .row3 .col3 {
@@ -120,7 +121,7 @@ input {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	height: 250px;
+	
 }
 
 .class_form_content .row3 .col3 .col_content {
@@ -187,7 +188,7 @@ form .delete_btn {
 	justify-content: space-around;
 }
 
-form .submit_btn {
+form .submit_btn, .cancel_btn {
 	font-size: 20px;
 	background: #0E5881;
 	color: white;
@@ -303,4 +304,46 @@ a:hover {
 
 .search_btn img {
 	width: 20px;
+}
+
+.add_file {
+	border:none;
+	background: none;
+	font-weight: bold;
+	color: #0E5881;
+	display: flex;
+	cursor: pointer;
+}
+
+.delete_file{
+	border:none;
+	background: none;
+	font-weight: bold;
+	color: #0E5881;
+	cursor: pointer;
+	margin-left: 5px;
+}
+
+.file_wrap {
+	display:flex;
+	align-items: center;
+}
+
+.add_file_img{
+	width:20px;
+}
+
+.file_img {
+	width:20px;
+	height:20px;
+	margin-right: 5px;
+}
+
+input[type="file"]{
+	display: block;
+	margin : 5px;
+}
+
+.submit_btn, button {
+	cursor: pointer;
 }
