--- a/KosaESS/src/main/resources/static/css/admin/class_list.css
+++ b/KosaESS/src/main/resources/static/css/admin/class_list.css
@@ -33,7 +33,7 @@
 }
 
 .home-section .content_middle {
-	margin: 40px;
+	margin: 40px 40px 10px 40px;
 	display: flex;
 	justify-content: space-between;
 	border-top: 2px solid #0E5881;
@@ -88,7 +88,7 @@
 }
 
 .home-section .content_bottom {
-	margin: 40px;
+	margin: 10px 40px 40px 40px;
 }
 
 .home-section .content_bottom .content_info_wrap {
