--- a/KosaESS/src/main/resources/templates/admin/class_form.html
+++ b/KosaESS/src/main/resources/templates/admin/class_form.html
@@ -377,68 +377,33 @@
 						<div class="col3">
 							<div class="col_title">첨부 파일</div>
 							<div class="col_content">
-								<div
-									th:if="${act=='insert' or (act=='update' and #lists.size(fileList)==0)}">
-									<div class="file_list">
-										<div class="file_wrap">
-											<div class="file_input">
-												<input type="text" readonly /> <label> 첨부파일 <input
-													id="file" type="file" name="files"
-													onchange="selectFile(this);" />
-												</label>
-											</div>
-											<button type="button" onclick="removeFile(this);"
-												class="btns del_btn">
-												<span>삭제</span>
-											</button>
-											<button type="button" onclick="addFile();"
-												class="btns fn_add_btn">
-												<span>파일 추가</span>
-											</button>
-										</div>
-									</div>
-								</div>
-								<div th:if="${act}=='update'">
-									<div class="file_list">
-										<div class="file_wrap" th:each="file, iterStat : ${fileList}">
-											<div class="file_input">
-												<input type="text" th:name="fileId"
-													th:value="${file.fileNm}" onchange="fileChange(this)"
-													readonly /> <input type="hidden"
-													th:value="${file.fileSubId}"> <label> 첨부파일
-													<input id="file" type="file" name="files"
-													onchange="selectFile(this);" />
-
-
-												</label>
-											</div>
-											<button type="button" onclick="removeFile(this);"
-												class="btns del_btn">
-												<span>삭제</span>
-											</button>
-											<div th:if="${iterStat.index<1}">
-												<button type="button" onclick="addFile();"
-													class="btns fn_add_btn">
-													<span>파일 추가</span>
-												</button>
-											</div>
-										</div>
-									</div>
-								</div>
-								<div th:if="${act}=='select'" class="file_detail" id="file_drag">
-									<div th:if="${fileList ==null}">첨부파일 없음</div>
-									<div th:each="file: ${fileList}"
-										style="display: flex; align-items: center;">
-										<img style="width: 15px; height: 15px; margin-right: 5px;"
-											th:src="@{/img/file.png}">
-										<div>
-											<a
-												th:href="@{/download/file/__${file.fileId}__/__${file.fileSubId}__}"
-												th:text="${file.fileNm}"></a>
-										</div>
+								<div th:if="${act=='select'}">
+									<div th:if="${classVO.fileId} == null">첨부파일 없음</div>
+									<div class="file_wrap" th:each="file: ${fileList}">
+										<img class="file_img" th:src="@{/img/file.png}"> <a
+											th:href="@{/download/file/__${file.fileId}__/__${file.fileSubId}__}"
+											th:text="${file.fileNm}"></a>
 									</div>
 								</div>
 
+								<div th:if="${act=='update' or act=='insert'}">
+									<button class="add_file" onclick="addFile(this)" type="button">
+										<img class="add_file_img" th:src="@{/img/plus_navy.png}">
+										파일추가
+									</button>
+									<input type="hidden" class="upload_file_cnt"
+										th:value="${#lists.size(fileList)}">
+									<div>
+										<div th:each="file: ${fileList}" class="file_wrap">
+											<input type="hidden" th:value="${file.fileSubId}"> <img
+												class="file_img" th:src="@{/img/file.png}"> <span
+												th:text="${file.fileNm}"></span>
+											<button class="delete_file" type="button"
+												onclick="deleteFile(this)">삭제</button>
+										</div>
+									</div>
+									<input type="file" name="files">
+								</div>
 							</div>
 						</div>
 						<div class="col3">
@@ -461,7 +426,8 @@
 				<!-- create / update일 때 -->
 				<div th:if="${act=='insert' or act=='update'}"
 					style="display: flex; justify-content: center;">
-					<input class="submit_btn" type="submit" value="저장하기">
+					<button class="cancel_btn" type="button" th:onclick="'location.href=\'' + @{/admin/class/list/1} + '\''">취소</button>
+					<input class="submit_btn" type="submit" value="저장">
 				</div>
 				<!-- select일 때 -->
 				<div th:if="${act}=='select'"
@@ -470,7 +436,7 @@
 					<div class="submit_btn"
 						th:onclick="'location.href=\'' + @{/admin/class/update/__${classVO.clssId}__} + '\''">수정</div>
 					<div class="submit_btn"
-						th:onclick="'location.href=\'' + @{/admin/class/list} + '\''">목록</div>
+						th:onclick="'location.href=\'' + @{/admin/class/list/1} + '\''">목록</div>
 				</div>
 			</form>
 		</div>
@@ -478,6 +444,11 @@
 	</div>
 	<!-- Content Wrap -->
 	<script>
+	//추가된 파일 개수
+	var fileCnt = Number(document.querySelector(".upload_file_cnt").value);
+	
+	
+	
 		aplyEndDt = '';
 		classTotalTm = 0; //교육과정 총 이수시간
 		
@@ -825,82 +796,30 @@
 			$("#clss_total_tm").val(clssTotalTm);
 		}
 		
-		// 파일 선택
-	    function selectFile(element) {
-
-	        const file = element.files[0];
-	        const filename = element.closest('.file_input').firstElementChild;
-
-	        // 1. 파일 선택 창에서 취소 버튼이 클릭된 경우
-	        if ( !file ) {
-	            filename.value = '';
-	            return false;
-	        }
-
-	        // 2. 파일 크기가 10MB를 초과하는 경우
-	        const fileSize = Math.floor(file.size / 1024 / 1024);
-	        if (fileSize > 10) {
-	            alert('10MB 이하의 파일로 업로드해 주세요.');
-	            filename.value = '';
-	            element.value = '';
-	            return false;
-	        }
-
-	        // 3. 파일명 지정
-	        filename.value = file.name;
-	        fileChange(filename);
-	    }
-
-
-	    // 파일 추가
-	    function addFile() {
-	        const fileDiv = document.createElement('div');
-	        fileDiv.className = 'file_wrap';
-	        fileDiv.innerHTML =`
-	            <div class="file_input">
-	                <input type="text" readonly />
-	                <label> 첨부파일
-	                    <input type="file" name="files" onchange="selectFile(this);" />
-	                </label>
-	            </div>
-	            <button type="button" onclick="removeFile(this);" class="btns del_btn"><span>삭제</span></button>
-	        `;
-	        document.querySelector('.file_list').appendChild(fileDiv);
-	    }
-
-
-	    // 파일 삭제
-	    function removeFile(element) {
-	        const fileAddBtn = element.nextElementSibling;
-            var deleteFileInput = element.previousElementSibling.querySelectorAll('input[type="hidden"]');
-            deleteFileInput.forEach (
-	            	function(inputElement) {
-	            		// 각 input 요소의 name 속성을 "fileSubId"로 설정
-	            		inputElement.setAttribute('name', 'fileSubId');	
-	            		console.log(inputElement.value);
-	            	}
-	            );
-	        if (fileAddBtn) {
-	            const inputs = element.previousElementSibling.querySelectorAll('input[type="text"]');
-	            inputs.forEach(input => input.value = '')
-	            return false;
-	        }
-	        element.parentElement.remove();
-	    }
-	    
-	    //파일 수정
-	    function fileChange(inputElement) {
-	    	console.log("파일수정함");
-	    	
-    		// 이후 형제 노드를 찾음
-    		var nextInput = inputElement.nextElementSibling;
-
-    		// 이전 형제 노드가 <input type="hidden"> 태그인 경우에만 작업 수행
-    		if (nextInput && nextInput.tagName === 'INPUT' && nextInput.type === 'hidden') {
-        		// 이전 <input type="hidden"> 태그에 name 속성을 추가
-        		nextInput.setAttribute('name', 'fileSubId');
-        		console.log(nextInput.value);
-    		}
+		//update일 때 '파일추가'버튼 클릭하면 파일 추가하기
+		function addFile(button){
+			console.log(fileCnt);
+			if(fileCnt < 4){
+				var divParent = button.closest('div');
+				var inputFile = document.createElement('input');
+				inputFile.type = 'file';
+				inputFile.name = 'files';
+				divParent.appendChild(inputFile);
+				fileCnt =  fileCnt + 1;
+			}else{
+				alert("파일은 최대 5개까지만 등록 가능합니다.");
+			}
+			
+		}
+		
+		//update일 때 파일 '삭제'버튼 클릭하면 input type="hidden"에 name 추가
+		function deleteFile(button){
+			var divParent = button.closest('div');
+			var inputHidden = divParent.querySelector('input');
+			inputHidden.name='deleteFiles';
+			console.log(inputHidden.value);
+			divParent.style.display = 'none';
+			fileCnt =  fileCnt - 1;
 		}
 	    
 	    //삭제하기
