--- a/KosaESS/src/main/resources/templates/admin/lecture_list2.html
+++ b/KosaESS/src/main/resources/templates/admin/lecture_list2.html
@@ -29,131 +29,308 @@
 
 		<!-- Content Middle-->
 		<div class="content_middle">
-			<!-- 강의 관리 -->
-			<div class="lecture_wrap">
-				<!-- 강의 검색하기 -->
-				<div class="insert_lecture insert" style="padding: 5px;">
-					<div>
-						<span>과목명<span class="red">*</span></span> <select
-							id="subject_id_input">
-							<option th:each="subject: ${subjectList}"
-								th:value="${subject.sbjtId}" th:text="${subject.sbjtNm}">
-						</select> <span>강사명<span class="red">*</span></span> <select
-							id="professor_id_input">
-							<option th:each="professor: ${professorList}"
-								th:value="${professor.profId}" th:text="${professor.profNm}">
-						</select> <span>강의명<span class="red">*</span></span> <input
-							id="lecture_nm_input" value="" type="text" placeholder="강의명"
-							style="width: 150px;"> <span>이수시간<span class="red">*</span></span>
-						<input id="lecture_tm_input" type="number" value="0"
-							style="width: 100px;">
+			<!-- left section -->
+			<div class="left_section">
+				<!-- 강의 관리 -->
+				<div class="lecture_wrap" style="height: 100%;">
+
+					<!-- 총 개수 및 버튼-->
+					<div class="content_info_wrap">
+						<div>
+							총 <span class="lecture_cnt cnt"
+								th:text="${#lists.size(lectureList)}"></span> 건
+						</div>
+						<div class="content_info_button_wrap" style="display: flex;">
+							<button id="lecture_delete_btn">
+								<img th:src="@{/img/minus_white.png}" style="width: 20px;">
+								<span>선택삭제</span>
+							</button>
+
+							<button id="lecture_update_btn" onclick="enterLectureEditMode()">
+								<img th:src="@{/img/update_white.png}" style="width: 20px;">
+								<span>수정하기</span>
+							</button>
+
+							<button id="lecture_cancel_btn" onclick="cancelLectureEditMode()"
+								style="display: none;">
+								<img th:src="@{/img/x_white.png}" style="width: 20px;"> <span>수정취소</span>
+							</button>
+
+							<button id="lecture_save_btn" onclick="saveLecture()"
+								style="display: none;">
+								<img th:src="@{/img/save_white.png}" style="width: 20px;">
+								<span>저장하기</span>
+							</button>
+						</div>
 					</div>
-					<div>
-						<button class="insert_btn" type="button" onclick="insertLecture()"
-							style="display: flex;">
-							<img th:src="@{/img/plus_white.png}" style="width: 20px;">
-							등록하기
-						</button>
+					<!-- 총 개수 및 버튼-->
+
+					<!-- 강의 등록하기 -->
+					<div class="insert_lecture insert" style="padding: 5px;">
+						<div>
+							<span>과목명<span class="red">*</span></span> <select
+								id="subject_id_input">
+								<option th:each="subject: ${subjectList}"
+									th:value="${subject.sbjtId}" th:text="${subject.sbjtNm}">
+							</select> <span>강사명<span class="red">*</span></span> <select
+								id="professor_id_input">
+								<option th:each="professor: ${professorList}"
+									th:value="${professor.profId}" th:text="${professor.profNm}">
+							</select> <span>강의명<span class="red">*</span></span> <input
+								id="lecture_nm_input" value="" type="text" placeholder="강의명"
+								style="width: 150px;"> <span>이수시간<span
+								class="red">*</span></span> <input id="lecture_tm_input" type="number"
+								value="0" style="width: 100px;">
+						</div>
+						<div>
+							<button class="insert_btn" type="button"
+								onclick="insertLecture()" style="display: flex;">
+								<img th:src="@{/img/plus_white.png}" style="width: 20px;">
+								등록하기
+							</button>
+						</div>
 					</div>
+					<!-- 강의 등록하기 -->
+
+					<!-- 리스트 -->
+					<div class="table_wrap lecture_table">
+						<table>
+							<thead>
+								<tr class="content_list_th">
+									<th style="width: 5%;"><input type="checkbox"
+										name="lecture_select_all" onclick="lectureSelectAll(this)"
+										class="lecture_checkbox_all"></th>
+									<th style="width: 10%;">번호</th>
+									<th style="width: 40%;">강의명</th>
+									<th style="width: 25%;">과목명</th>
+									<th style="width: 10%;">강사명</th>
+									<th style="width: 10%;">이수시간</th>
+								</tr>
+							</thead>
+							<tbody class="lecture_tbody">
+								<tr th:each="lecture, iterStat : ${lectureList}">
+									<td class="td_lecture_check_box"><input type="checkbox"
+										name="lecture_select" onclick="lectureCheckSelectAll()"
+										th:value="${lecture.lctrId}" class="lecture_checkbox_item">
+										<input type="hidden" class="lecture_update_yn" value="N">
+									</td>
+									<td class="td_lecture_num" th:text="${#lists.size(lectureList)-iterStat.index}"></td>
+									<td class="td_lecture_nm"><span class="lecture_span"
+										th:text="${lecture.lctrNm}"></span> <input
+										style="display: none;" class="lecture_input lecture_nm"
+										type="text" th:value="${lecture.lctrNm}"></td>
+									<td class="td_lecture_subject"><span class="lecture_span"
+										th:text="${lecture.sbjtNm}"></span> <select
+										class="lecture_select lecture_sbjt" style="display: none;">
+											<option th:each="subject: ${subjectList}"
+												th:value="${subject.sbjtId}" th:text="${subject.sbjtNm}"
+												th:selected="${subject.sbjtId == lecture.sbjtId}">
+									</select></td>
+									<td class="td_lecture_professor"><span
+										class="lecture_span" th:text="${lecture.profNm}"></span> <select
+										class="lecture_select lecture_prof" style="display: none;">
+											<option th:each="professor: ${professorList}"
+												th:value="${professor.profId}" th:text="${professor.profNm}"
+												th:selected="${professor.profId == lecture.profId}">
+									</select></td>
+									<td class="td_lecture_tm"><span class="lecture_span"
+										th:text="${lecture.lctrTm}"></span> <input
+										style="display: none; width: 80px;"
+										class="lecture_input lecture_tm" type="number"
+										th:value="${lecture.lctrTm}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<!-- 리스트 -->
 				</div>
-				<!-- 강의 검색하기 -->
-
-
-				<!-- 총 개수 및 버튼-->
-				<div class="content_info_wrap">
-					<div style="display: flex;align-items:center;">
-						<span>총 <span class="lecture_cnt cnt"
-							th:text="${#lists.size(lectureList)}"></span>
-							 건</span>
-					</div>
-					<div class="content_info_button_wrap">
-						<button class="insert_btn" type="button" onclick="showInsertLecturePopup()"
-							style="display: flex;">
-							<img th:src="@{/img/plus_white.png}" style="width: 20px;">
-							등록하기
-						</button>
-					
-						<button id="lecture_delete_btn">
-							<img th:src="@{/img/minus_white.png}" style="width: 20px;">
-							<span>선택삭제</span>
-						</button>
-
-						<button id="lecture_update_btn" onclick="enterLectureEditMode()">
-							<img th:src="@{/img/update_white.png}" style="width: 20px;">
-							<span>수정하기</span>
-						</button>
-
-						<button id="lecture_cancel_btn" onclick="cancelLectureEditMode()"
-							style="display: none;">
-							<img th:src="@{/img/x_white.png}" style="width: 20px;"> <span>수정취소</span>
-						</button>
-
-						<button id="lecture_save_btn" onclick="saveLecture()"
-							style="display: none;">
-							<img th:src="@{/img/save_white.png}" style="width: 20px;">
-							<span>저장하기</span>
-						</button>
-					</div>
-				</div>
-				<!-- 총 개수 및 버튼-->
-
-				<!-- 리스트 -->
-				<div class="table_wrap lecture_table">
-					<table>
-						<thead>
-							<tr class="content_list_th">
-								<th style="width: 5%;"><input type="checkbox"
-									name="lecture_select_all" onclick="lectureSelectAll(this)"
-									class="lecture_checkbox_all"></th>
-								<th style="width: 10%;">번호</th>
-								<th style="width: 40%;">강의명</th>
-								<th style="width: 25%;">과목명</th>
-								<th style="width: 10%;">강사명</th>
-								<th style="width: 10%;">이수시간</th>
-							</tr>
-						</thead>
-						<tbody class="lecture_tbody">
-							<tr th:each="lecture, iterStat : ${lectureList}">
-								<td class="td_lecture_check_box"><input type="checkbox"
-									name="lecture_select" onclick="lectureCheckSelectAll()"
-									th:value="${lecture.lctrId}" class="lecture_checkbox_item">
-									<input type="hidden" class="lecture_update_yn" value="N">
-								</td>
-								<td class="td_lecture_num"
-									th:text="${#lists.size(lectureList)-iterStat.index}"></td>
-								<td class="td_lecture_nm"><span class="lecture_span"
-									th:text="${lecture.lctrNm}"></span> <input
-									style="display: none;" class="lecture_input lecture_nm"
-									type="text" th:value="${lecture.lctrNm}"></td>
-								<td class="td_lecture_subject"><span class="lecture_span"
-									th:text="${lecture.sbjtNm}"></span> <select
-									class="lecture_select lecture_sbjt" style="display: none;">
-										<option th:each="subject: ${subjectList}"
-											th:value="${subject.sbjtId}" th:text="${subject.sbjtNm}"
-											th:selected="${subject.sbjtId == lecture.sbjtId}">
-								</select></td>
-								<td class="td_lecture_professor"><span class="lecture_span"
-									th:text="${lecture.profNm}"></span> <select
-									class="lecture_select lecture_prof" style="display: none;">
-										<option th:each="professor: ${professorList}"
-											th:value="${professor.profId}" th:text="${professor.profNm}"
-											th:selected="${professor.profId == lecture.profId}">
-								</select></td>
-								<td class="td_lecture_tm"><span class="lecture_span"
-									th:text="${lecture.lctrTm}"></span> <input
-									style="display: none; width: 80px;"
-									class="lecture_input lecture_tm" type="number"
-									th:value="${lecture.lctrTm}"></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-				<!-- 리스트 -->
+				<!-- 강의 관리 -->
 			</div>
-			<!-- 강의 관리 -->
+			<!-- left section -->
+
+			<!-- right section -->
+			<div class="right_section">
+				<!-- 과목 관리 -->
+				<div class="subject_wrap" style="height: 50%;">
+					<!-- 총 개수 및 버튼-->
+					<div class="content_info_wrap">
+						<div>
+							과목 총 <span class="cnt subject_cnt"
+								th:text="${#lists.size(subjectList)}"></span> 건
+						</div>
+						<div class="content_info_button_wrap">
+							<button id="subject_delete_btn">
+								<img th:src="@{/img/minus_white.png}"> <span>선택삭제</span>
+							</button>
+
+							<button id="subject_update_btn" onclick="enterSubjectEditMode()">
+								<img th:src="@{/img/update_white.png}"> <span>수정하기</span>
+							</button>
+
+							<button id="subject_cancel_btn" onclick="cancelSubjectEditMode()"
+								style="display: none;">
+								<img th:src="@{/img/x_white.png}"> <span>수정취소</span>
+							</button>
+
+							<button id="subject_save_btn" onclick="saveSubject()"
+								style="display: none;">
+								<img th:src="@{/img/save_white.png}"> <span>저장하기</span>
+							</button>
+						</div>
+					</div>
+					<!-- 총 개수 및 버튼-->
+
+					<!-- 과목 등록하기 -->
+					<div class="insert_subject insert" style="padding: 5px;">
+						<div>
+							<span>과목명<span class="red">*</span></span> <input
+								id="subject_input" type="text" placeholder="과목명">
+						</div>
+
+						<div>
+							<button class="insert_btn" type="button"
+								onclick="insertSubject()">
+								<img th:src="@{/img/plus_white.png}">등록하기
+							</button>
+						</div>
+					</div>
+					<!-- 과목 등록하기 -->
+
+					<!-- 리스트 -->
+					<div class="table_wrap subject_table">
+						<table>
+							<thead>
+								<tr class="content_list_th">
+									<th style="width: 10%;"><input type="checkbox"
+										name="subject_select_all" onclick="subjectSelectAll(this)"
+										class="subject_checkbox_all"></th>
+									<th style="width: 10%;">번호</th>
+									<th style="width: 80%;">과목명</th>
+								</tr>
+							</thead>
+							<tbody class="subject_tbody">
+								<tr th:each="subject, iterStat : ${subjectList}">
+									<td class="td_subject_check_box"><input type="checkbox"
+										name="subject_select" onclick="subjectCheckSelectAll()"
+										class="subject_checkbox_item" th:value="${subject.sbjtId}">
+										<input type="hidden" class="subject_update_yn" value="N">
+									</td>
+									<td class="td_subject_num" th:text="${#lists.size(subjectList)-iterStat.index}"></td>
+									<td class="td_subject_nm"><span class="subject_span"
+										th:text="${subject.sbjtNm}"></span> <input
+										style="display: none;" type="text"
+										class="subject_input subject_nm" th:value="${subject.sbjtNm}">
+									</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<!-- 리스트 -->
+				</div>
+				<!-- 과목 관리 -->
+
+				<!-- 강사 관리 -->
+				<div class="professor_wrap" style="height: 50%;">
+					<!-- 총 개수 및 버튼-->
+					<div class="content_info_wrap">
+						<div>
+							강사 총 <span class="cnt professor_cnt" th:text="${#lists.size(professorList)}"></span>
+							건
+						</div>
+						<div class="content_info_button_wrap">
+							<button id="professor_delete_btn">
+								<img th:src="@{/img/minus_white.png}"> <span>선택삭제</span>
+							</button>
+
+							<button id="professor_update_btn"
+								onclick="enterProfessorEditMode()">
+								<img th:src="@{/img/update_white.png}"> <span>수정하기</span>
+							</button>
+
+							<button id="professor_cancel_btn" style="display: none;"
+								onclick="cancelProfessorEditMode()">
+								<img th:src="@{/img/x_white.png}"> <span>수정취소</span>
+							</button>
+
+							<button id="professor_save_btn" onclick="saveProfessor()"
+								style="display: none;">
+								<img th:src="@{/img/save_white.png}"> <span>저장하기</span>
+							</button>
+						</div>
+					</div>
+
+					<!-- 총 개수 및 버튼-->
+
+					<!-- 강사 등록하기 -->
+					<div class="insert_professor insert" style="padding: 5px;">
+						<div>
+							<span>강사명<span class="red">*</span></span> <input
+								id="professor_name_input" type="text" placeholder="강사명"
+								style="width: 50px;"> <span>전화번호<span class="red">*</span></span>
+							<input id="professor_tel_input" type="text" placeholder="전화번호"
+								style="width: 100px;"> <span>이메일<span class="red">*</span></span>
+							<input id="professor_email_input" type="email" placeholder="이메일"
+								style="width: 150px;">
+						</div>
+						<div>
+							<button class="insert_btn" type="button"
+								onclick="insertProfessor()">
+								<img th:src="@{/img/plus_white.png}">등록하기
+							</button>
+						</div>
+					</div>
+					<!-- 강사 등록하기 -->
+
+					<!-- 리스트 -->
+					<div class="table_wrap professor_table">
+						<table>
+							<thead>
+								<tr class="content_list_th">
+									<th style="width: 5%;"><input type="checkbox"
+										name="professor_select_all" onclick="professorSelectAll(this)"
+										class="professor_checkbox_all"></th>
+									<th style="width: 10%;">번호</th>
+									<th style="width: 20%;">강사명</th>
+									<th style="width: 30%;">전화번호</th>
+									<th style="width: 35%;">이메일</th>
+								</tr>
+							</thead>
+							<tbody class="professoe_tbody">
+								<tr th:each="professor, iterStat : ${professorList}">
+									<td class="td_professor_check_box"><input type="checkbox"
+										name="professor_select" onclick="professorCheckSelectAll()"
+										class="professor_checkbox_item" th:value="${professor.profId}">
+										<input type="hidden" class="professor_update_yn" value="N">
+									</td>
+									<td class="td_professor_num" th:text="${#lists.size(professorList)-iterStat.index}"></td>
+									<td class="td_professor_nm"><span class="professor_span"
+										th:text="${professor.profNm}"></span> <input
+										class="professor_input professor_nm"
+										style="display: none; width: 100px;"
+										th:value="${professor.profNm}"></td>
+									<td class="td_professor_tel"><span class="professor_span"
+										th:text="${professor.profTel}"></span> <input
+										class="professor_input professor_tel"
+										style="display: none; width: 100px;"
+										th:value="${professor.profTel}"></td>
+									<td class="td_professor_email"><span class="professor_span"
+										th:text="${professor.profEmail}"></span> <input
+										class="professor_input professor_email"
+										style="display: none; width: 200px;"
+										th:value="${professor.profEmail}"></td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+					<!-- 리스트 -->
+				</div>
+				<!-- 강사 관리 -->
+			</div>
+			<!-- right section -->
 		</div>
 		<!-- Content Middle-->
 	</div>
+
 	<script>
 	
 	/*
@@ -183,19 +360,6 @@
 			selectAll.checked = false;
 		}
 	}
-	
-	//강의 등록하기 버튼(팝업 띄우기)
-	var popup;
-	function showInsertLecturePopup(){
-		popup = window.open(
-				"/admin/lecture/insert", "insertlecture", 
-				"width=500, height=350, left=800, top=400"		
-		);
-	}
-	
-	
-	
-	
 	
 	//과목 전체선택
 	function subjectSelectAll(selectAll){
